# openai-api

./: .gitignore  CHANGELOG.md  README.md  demo.json  openai-api.cabal
OpenAI/: Auth.hs  Conf.hs  Req.hs  Resp.hs  tmp.hs
OpenAI/Chat/: API.hs  Data.hs
OpenAI/Completions/: API.hs  Data.hs
OpenAI/Models/: API.hs  Data.hs
app/: Main.hs
lib/: Auth.hs  Models.hs  Resp.hs
