cabal-version:      2.4
name:               api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             xieyuschen 
maintainer:         xieyuschen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-depends
    build-depends:
        base >= 4.14 && < 4.17
        , mtl
        , bytestring
        -- import the Network.HTTP.Simple
        , http-conduit
        , aeson
        , http-client
        , utf8-string
        , yaml
library openai-api-lib
    import: common-depends
    exposed-modules:  
        Auth
        , Models
        , Conf
    hs-source-dirs:   lib
    default-language: Haskell2010

executable api
    -- import should put before main-is field
    import: common-depends 
    main-is:          Main.hs
    build-depends:
        openai-api-lib
    hs-source-dirs:   app
    default-language: Haskell2010
