cabal-version:      2.4
name:               openai-api
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             xieyuschen 
maintainer:         xieyuschen@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-depends
    build-depends:
        base >= 4.14 && < 4.17
        , mtl
        , bytestring
        -- import the Network.HTTP.Simple
        , http-conduit
        , aeson
        , http-client
        , utf8-string
        , yaml
        , conduit
        , conduit-extra
        , http-client-tls
        , http-types
        , text
        , vector
        , transformers
        , unliftio
        , co-log
        , aeson-pretty
    

library openai-api-lib
    import: common-depends
    exposed-modules:  
        Auth
        , Conf
        , Req
    hs-source-dirs:   OpenAI
    default-language: Haskell2010
    
library openai 
    import: common-depends
    exposed-modules:  
        OpenAI.Models.API
        , OpenAI.Models.Data
        , OpenAI.Chat.API
        , OpenAI.Chat.Data
    build-depends:
        openai-api-lib

    hs-source-dirs:  . 
    default-language: Haskell2010

-- ignore the app/Main.hs but keep it now for temporary usage.
-- todo: remove it in the future, add test cases for the library.
executable api
    -- import should put before main-is field
    import: common-depends 
    main-is:          Main.hs
    build-depends:
        openai-api-lib
        , openai
    hs-source-dirs:   app
    default-language: Haskell2010
